{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 177,
  "lineage": "297cdd06-09ae-6cc6-67ef-912315fd6f8e",
  "resources": [
    {
      "module": "module.applicationLoadBalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "loadBalancer",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:loadbalancer/app/lb-bog20240115001829635000000001/fb71cb61262f079b",
            "arn_suffix": "app/lb-bog20240115001829635000000001/fb71cb61262f079b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-bog20240115001829635000000001-467626456.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335612047:loadbalancer/app/lb-bog20240115001829635000000001/fb71cb61262f079b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-bog20240115001829635000000001",
            "name_prefix": "lb-bog",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02a7243d53283621a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c7c8c47ef48db0f5"
              },
              {
                "subnet_id": "subnet-0cbadd2577a085e4a"
              }
            ],
            "subnets": [
              "subnet-0c7c8c47ef48db0f5",
              "subnet-0cbadd2577a085e4a"
            ],
            "vpc_id": "vpc-037554111dbb4058b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.applicationLoadBalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "albTargetListener",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:listener/app/lb-bog20240115001829635000000001/fb71cb61262f079b/30dea5ab4ebdd89d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:targetgroup/tg-bo20240115172251547600000001/b998e8128f614572",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335612047:listener/app/lb-bog20240115001829635000000001/fb71cb61262f079b/30dea5ab4ebdd89d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:loadbalancer/app/lb-bog20240115001829635000000001/fb71cb61262f079b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.applicationLoadBalancer.aws_lb.loadBalancer",
            "module.applicationLoadBalancer.aws_lb_target_group.targetGroup",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.applicationLoadBalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "albListenerRule",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:targetgroup/tg-bo20240115172251547600000001/b998e8128f614572",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:listener-rule/app/lb-bog20240115001829635000000001/fb71cb61262f079b/30dea5ab4ebdd89d/5aad4516f991b53a",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "staging.bogano.sinkingmoon.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335612047:listener-rule/app/lb-bog20240115001829635000000001/fb71cb61262f079b/30dea5ab4ebdd89d/5aad4516f991b53a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:listener/app/lb-bog20240115001829635000000001/fb71cb61262f079b/30dea5ab4ebdd89d",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.applicationLoadBalancer.aws_lb.loadBalancer",
            "module.applicationLoadBalancer.aws_lb_listener.albTargetListener",
            "module.applicationLoadBalancer.aws_lb_target_group.targetGroup",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.applicationLoadBalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetGroup",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:730335612047:targetgroup/tg-bo20240115172251547600000001/b998e8128f614572",
            "arn_suffix": "targetgroup/tg-bo20240115172251547600000001/b998e8128f614572",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:730335612047:targetgroup/tg-bo20240115172251547600000001/b998e8128f614572",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-bo20240115172251547600000001",
            "name_prefix": "tg-bo",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 30,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bogano_ecs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bogano_ingress_security_group",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:security-group/sg-0d282043445f3be20",
            "description": "Security group for staging bogano ingress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0d282043445f3be20",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "staging-bogano-ingress-sg",
            "name_prefix": "",
            "owner_id": "730335612047",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_ecs[0]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:security-group/sg-07ad060c543521982",
            "description": "Security group for staging bogano ECS Service Ingress Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ad060c543521982",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d282043445f3be20"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "staging-bogano-service-ingress-sg",
            "name_prefix": "",
            "owner_id": "730335612047",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_ecs.aws_security_group.bogano_ingress_security_group",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.sgLoadBalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:security-group/sg-02a7243d53283621a",
            "description": "Security Group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Outgoing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a7243d53283621a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http incoming ipv4",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "Allow http incoming ipv6",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "bogano-load-balancer-security-group-20240113160018649700000001",
            "name_prefix": "bogano-load-balancer-security-group-",
            "owner_id": "730335612047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bogano-load-balancer-security-group"
            },
            "tags_all": {
              "Name": "bogano-load-balancer-security-group"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.sgLoadBalancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all Outgoing",
            "from_port": 0,
            "id": "sgrule-1975951175",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-02a7243d53283621a",
            "security_group_rule_id": "sgr-015af33680f29ed80",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.sgLoadBalancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http incoming ipv4",
            "from_port": 80,
            "id": "sgrule-932715276",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02a7243d53283621a",
            "security_group_rule_id": "sgr-0ce6953d542e005d6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.sgLoadBalancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow http incoming ipv6",
            "from_port": 80,
            "id": "sgrule-1563611538",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-02a7243d53283621a",
            "security_group_rule_id": "sgr-0ca28b848495513b3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this",
            "module.bogano_vpc.module.sgLoadBalancer.aws_security_group.this_name_prefix",
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:network-acl/acl-02a7cd1f1ae6aab9f",
            "default_network_acl_id": "acl-02a7cd1f1ae6aab9f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02a7cd1f1ae6aab9f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "730335612047",
            "subnet_ids": [
              "subnet-020ba882aa40017f5",
              "subnet-080d70ffd8007f274",
              "subnet-0c7c8c47ef48db0f5",
              "subnet-0cbadd2577a085e4a"
            ],
            "tags": {
              "Name": "bogano-vpc-default"
            },
            "tags_all": {
              "Name": "bogano-vpc-default"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:route-table/rtb-0876514a4fe597ce7",
            "default_route_table_id": "rtb-0876514a4fe597ce7",
            "id": "rtb-0876514a4fe597ce7",
            "owner_id": "730335612047",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bogano-vpc-default"
            },
            "tags_all": {
              "Name": "bogano-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:internet-gateway/igw-03b91b7a1bcf2d543",
            "id": "igw-03b91b7a1bcf2d543",
            "owner_id": "730335612047",
            "tags": {
              "Name": "bogano-vpc"
            },
            "tags_all": {
              "Name": "bogano-vpc"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b91b7a1bcf2d543",
            "id": "r-rtb-0d6079332faefd14d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d6079332faefd14d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_internet_gateway.this",
            "module.bogano_vpc.module.vpc.aws_route_table.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:route-table/rtb-026fe20643863611c",
            "id": "rtb-026fe20643863611c",
            "owner_id": "730335612047",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bogano-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "bogano-vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:route-table/rtb-0740e96566d8c283d",
            "id": "rtb-0740e96566d8c283d",
            "owner_id": "730335612047",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "bogano-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "bogano-vpc-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:route-table/rtb-0d6079332faefd14d",
            "id": "rtb-0d6079332faefd14d",
            "owner_id": "730335612047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b91b7a1bcf2d543",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bogano-vpc-public"
            },
            "tags_all": {
              "Name": "bogano-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9f688da9a8f5d38",
            "route_table_id": "rtb-026fe20643863611c",
            "subnet_id": "subnet-080d70ffd8007f274"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_route_table.private",
            "module.bogano_vpc.module.vpc.aws_subnet.private",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082399a2791a05f56",
            "route_table_id": "rtb-0740e96566d8c283d",
            "subnet_id": "subnet-020ba882aa40017f5"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_route_table.private",
            "module.bogano_vpc.module.vpc.aws_subnet.private",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b45e37bca27bead",
            "route_table_id": "rtb-0d6079332faefd14d",
            "subnet_id": "subnet-0cbadd2577a085e4a"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_route_table.public",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf13530bfa1d069d",
            "route_table_id": "rtb-0d6079332faefd14d",
            "subnet_id": "subnet-0c7c8c47ef48db0f5"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_route_table.public",
            "module.bogano_vpc.module.vpc.aws_subnet.public",
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:subnet/subnet-080d70ffd8007f274",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080d70ffd8007f274",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335612047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bogano-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "bogano-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:subnet/subnet-020ba882aa40017f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020ba882aa40017f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335612047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bogano-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "bogano-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:subnet/subnet-0cbadd2577a085e4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbadd2577a085e4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335612047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bogano-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "bogano-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:subnet/subnet-0c7c8c47ef48db0f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7c8c47ef48db0f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335612047",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bogano-vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "bogano-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-037554111dbb4058b"
          },
          "dependencies": [
            "module.bogano_vpc.module.vpc.aws_vpc.this",
            "module.bogano_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bogano_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:730335612047:vpc/vpc-037554111dbb4058b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a7cd1f1ae6aab9f",
            "default_route_table_id": "rtb-0876514a4fe597ce7",
            "default_security_group_id": "sg-0e4f218b46121d55d",
            "dhcp_options_id": "dopt-06f0ecff18857d28c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-037554111dbb4058b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0876514a4fe597ce7",
            "owner_id": "730335612047",
            "tags": {
              "Name": "bogano-vpc"
            },
            "tags_all": {
              "Name": "bogano-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}